# HandlERR

./: .gitignore  README.md
clang/: CMakeLists.txt
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/clangd/: CMakeLists.txt  ClangdServer.cpp
clang-tools-extra/clangd/cconvert/: RewriteUtils.cpp
clang-tools-extra/interview-template/: CMakeLists.txt
clang/interview-template/: InterviewTemplate.cpp
clang/lib/3C/: 3C.cpp  3CInteractiveData.cpp  3CStats.cpp  ABounds.cpp  AVarBoundsInfo.cpp  ArrayBoundsInferenceConsumer.cpp  BasePointerAssignment.cpp  CMakeLists.txt  CastPlacement.cpp  CheckedRegions.cpp  ConstraintBuilder.cpp  ConstraintResolver.cpp  ConstraintVariables.cpp  Constraints.cpp  ConstraintsGraph.cpp  CtxSensAVarBounds.cpp  DeclJsonRewriter.cpp  DeclRewriter.cpp  Duplicate.cpp  IntermediateToolHook.cpp  MappingVisitor.cpp  MultiDecls.cpp  PersistentSourceLoc.cpp  ProgramInfo.cpp  ProgramVar.cpp  RewriteUtils.cpp  StructDenester.cpp  StructInit.cpp  TypeVariableAnalysis.cpp  Utils.cpp
clang/lib/3C/unittests/: ConstraintTests.cpp
clang/lib/AST/: ASTContext.cpp  Decl.cpp  TypeLoc.cpp
clang/lib/CConv/: AVarBoundsInfo.cpp  ArrayBoundsInferenceConsumer.cpp  CConv.cpp  CConvInteractiveData.cpp  CMakeLists.txt  CastPlacement.cpp  ConstraintBuilder.cpp  ConstraintResolver.cpp  ConstraintVariables.cpp  CtxSensAVarBounds.cpp  ProgramInfo.cpp  ProgramVar.cpp  RewriteUtils.cpp  TypeVariableAnalysis.cpp
clang/lib/DetectERR/: CMakeLists.txt  DetectERR.cpp  DetectERRASTConsumer.cpp  EHFCallVisitors.cpp  EHFCollectors.cpp  EHFVisitor.cpp  ErrGuard.cpp  ErrPoint.cpp  FiFuzzVisitors.cpp  GotoVisitors.cpp  PersistentSourceLoc.cpp  ProjectInfo.cpp  ReturnVisitors.cpp  ThrowVisitors.cpp  Utils.cpp  VisitorUtils.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Parse/: ParseDecl.cpp
clang/lib/Sema/: DeclSpec.cpp  SemaBounds.cpp  SemaDecl.cpp  SemaExpr.cpp  SemaType.cpp
clang/lib/Serialization/: ASTReader.cpp
clang/test/3C/: 3c-regtest-unconvert.py  3c-regtest-verify-all-conversions.sh  3c-regtest.py  3d-allocation.c  add_bounds.c  allarrays.c  alloc_type_param.c  allocator.c  alreadychecked.c  amper.c  anonstruct.c  arrboth.c  arrbothmulti1.c  arrbothmulti2.c  arrboundsadvanced.c  arrboundsbasic.c  arrboundsbasicinfer.c  arrboundsbyte.c  arrboundsheuristics.c  arrboundsinfer2.c  arrcallee.c  arrcalleemulti1.c  arrcalleemulti2.c  arrcaller.c  arrcallermulti1.c  arrcallermulti2.c  arrctxsenbounds.c  arrinlinestruct.c  arrinstructboth.c  arrinstructbothmulti1.c  arrinstructbothmulti2.c  arrinstructcallee.c  arrinstructcalleemulti1.c  arrinstructcalleemulti2.c  arrinstructcaller.c  arrinstructcallermulti1.c  arrinstructcallermulti2.c  arrinstructprotoboth.c  arrinstructprotocallee.c  arrinstructprotocaller.c  (+363 more)
clang/test/CheckedCRewriter/: compound_literal.c  tree.c
clang/tools/: CMakeLists.txt
clang/tools/3c/: 3CStandalone.cpp  CMakeLists.txt  README.md
clang/tools/3c/utils/code_style/: CMakeLists.txt  clang-tidy-wrapper.sh  fix-all.sh
clang/tools/3c/utils/port_tools/: convert_project.py  convert_project_common.py  expand_macros.py  generate_ccommands.py
clang/tools/cconv-standalone/: CConvStandalone.cpp
clang/tools/detecterr/: DetectERRMain.cpp
clang/tools/recursive-funs-interview/: CMakeLists.txt  RecursiveFunsIntv.cpp
(+150 files in other folders)
